--- a/index.html
+++ b/index.html
@@ -40,7 +40,6 @@
       filter: brightness(1.15) drop-shadow(0 0 10px rgba(255,255,200,0.6));
     }
 
-    /* Корзина */
     #basket {
       left: 8%;
       top: 25%;
@@ -49,7 +48,6 @@
       z-index: 10;
     }
 
-    /* Кастрюля */
     #pot {
       left: 33%;
       top: 20%;
@@ -58,7 +56,6 @@
       z-index: 1;
     }
 
-    /* Волшебная палочка */
     #wand {
       left: 58%;
       top: 64%;
@@ -68,7 +65,6 @@
       z-index: 5;
     }
 
-    /* Клубника */
     .berry {
       position: absolute;
       width: 10%;
@@ -78,7 +74,17 @@
       pointer-events: auto;
     }
 
-    /* Облако-текст (комикс-бабл) */
+    .poof {
+      position: absolute;
+      pointer-events: none;
+      z-index: 25;
+      opacity: 0;
+      transition: opacity 0.6s ease;
+      max-width: 150px; /* максимум */
+      width: auto;
+      height: auto;
+    }
+
     #steam-text {
       position: absolute;
       top: 32%;
@@ -99,14 +105,14 @@
       text-align: justify;
     }
 
-    /* Пуф */
-    .poof {
-      position: absolute;
-      width: 70px;
-      pointer-events: none;
-      z-index: 25;
-      opacity: 0;
-      transition: opacity 0.6s ease;
+    #welcome-bubble h2 {
+      color: #7b3131;
+      margin: 0 0 8px 0;
+      font-size: 18px;
+    }
+
+    #welcome-bubble p {
+      margin: 0;
     }
   </style>
 </head>
@@ -117,8 +123,30 @@
     <img id="pot" class="item" src="https://i.ibb.co/6JyrTSmY/rfcnh-kz1.gif" alt="Кастрюля" />
     <img id="wand" class="item" src="https://i.ibb.co/BVRr2VR2/Chat-GPT-Image-19-2025-08-36-05.png" alt="Волшебная палочка" />
 
-    <!-- Пар и текст-бабл -->
-    <div id="steam-text">Текст текст текст</div>
+    <!-- Бабл с пожеланиями при добавлении ягод -->
+    <div id="steam-text"></div>
+
+    <!-- Приветственный бабл -->
+    <div id="welcome-bubble" style="
+      position:absolute; 
+      top:30%; left:50%; 
+      transform:translate(-50%, -50%) scale(1); 
+      opacity:1; 
+      width:24%; 
+      padding:18px 22px; 
+      background-color: rgba(255,255,255,0.95); 
+      border-radius:20px; 
+      box-shadow:0 4px 8px rgba(0,0,0,0.2); 
+      z-index:35; 
+      text-align:justify;
+      font-family:'Pangolin', cursive;
+      font-size:16px;
+      transition: transform 0.5s ease, opacity 0.5s ease;
+    ">
+      <h2>✨ Ягодка, мы рады приветствовать тебя на волшебной кухне! ✨</h2>
+      <p>Сегодня особенный день, поэтому у нас для тебя есть особенный рецепт. Давай приготовим бесконечное варенье! Сколько его не ешь, оно не закончится и всегда будет тебя радовать.</p>
+      <p>Просто добавляй ягоды в кастрюлю: 🍓👉🏻🥘</p>
+    </div>
   </div>
 
 <script>
@@ -126,45 +154,32 @@
   const pot = document.getElementById("pot");
   const container = document.querySelector(".container");
   const steamText = document.getElementById("steam-text");
+  const welcomeBubble = document.getElementById("welcome-bubble");
 
   const berrySrc = "https://i.ibb.co/Hfdh9TPG/Chat-GPT-Image-17-2025-19-01-18.png";
+
   const messages = [
     "Джулс, с днем рождения! Пусть этот год принесёт тебе много сил, радости и крутых событий. Желаю ярких впечатлений, вдохновения во всём за что берёшься и крепкого здоровья.<br><br>Дина",
-    "Джулс, с днем рождения!<br><br>Каждый день испытывай удовольствие от жизни глобально и в мелочах, пусть все мечты непременно сбудутся. Благополучия, всех ресурсов в достатке, здоровья на максималках и большого-прибольшого счастья! *сердце*<br><br>Хаттори Райто",
     "Поздравляю с Днем Рождения! Кушайте много сладкого и пейте много вкусного в Ваш день 🎂<br><br>Аделин Эйвери",
-    "Дорогая Джулс!<br><br>Вот ты и стала старше на один год, а это значит, что ты всё ближе к «Мы можем называть её бабулею, а вы зовите её Джулией». Вообще-то, быть мудрой женщиной в летах не так уж и плохо! Поэтому желаю, чтобы возраст не наводил грусть, а был в радость. Пусть в твоей жизни всё будет хорошо. Работа работается, мечты сбываются, метла летает, семья процветает.<br><br>Люблю! Леончик!",
-    "Желаю Вам крепкого здоровья, много магических открытий, блестящих идей и таких же отважных студентов, какими Вы помогали становиться поколениям гриффиндорцев.<br><br>Пусть Ваш день будет полон тепла, улыбок и небольшого волшебства (обещаю, никаких проклятий или шалостей из нашей гостиной!).<br><br>С уважением и добрыми пожеланиями,<br>студентка Слизерина ✨🐍<br><br>Владислава Грин",
     "С днём рождения!!! Всего наилучшего и самого волшебного в жизни! :D<br><br>Герон Вайтмор",
-    "Искренне желаю всего самого лучшего! Здоровья, счастья, много галлеонов и всего, что захочется!<br><br>Патриция Роксинбург",
-    "Поздравляю с самым лучшим и весёлым праздником!) Пусть каждый день приносит радость, новые возможности и приятные сюрпризы.<br><br>Пусть в жизни всегда будет гармония, любовь и благополучие. Пусть все планы реализуются, а рядом всегда будут верные друзья и близкие люди. Ура!))<br><br>Энни Мур",
-    "Я до сих пор не знаю, как правильно обращаться, поэтому пусть будет так))<br><br>Миссис Джонсон-Шрив-Стиверсон, поздравляю Вас с Днём Рождения! Счастья, пусть все заклинания удаются успешно и часто случаются звездопады, чтобы загадывать много-много желаний, которые обязательно исполнятся!<br><br>От всей души желаю лично,<br>Вам, как домашнему коту,<br>Чтобы всегда жилось отлично<br>И на работе, и в быту!<br><br>Грэйс Грейлэнд",
-    "ДЖУУУУУУУУУЛС! Поздравляю тебя с днем рождения!<br>Ты невероятно классный, душевный и приятный человечек, знакомству и общению с которым я очень рад. Хочу, чтобы у тебя всегда было хорошее настроение и все получалось ❤️<br>Но главное - будь счастливой!<br>Очень люблю!!!!!1<br><br>Кевин Хоукинс",
-    "С ДНЁЁЁМ РОЖДЕНИЯЯЯ!!!!!! Ты — пушка, бомба, ракета квиддича и не только! Отличная наставница и собеседница. Желаю тебе здоровья, счастья, а также счастья и здоровья!<br><br>Кассия Дэверо",
-    "Уважаемая Джулия, поздравляю с днём рождения! Желаю, чтобы каждый момент твоей жизни был наполнен радостью, улыбками и счастьем. Пусть сбываются все твои мечты, а рядом всегда будут верные друзья и любящая семья. Пусть этот день будет таким же ярким и незабываемым, как ты сама!<br><br>Мы тебя любим, капитан!<br><br>Джоанна",
-    "Здравствуйте-здравствуйте, дорогая и всеми любимая Джулия Джонсон-Шрив-Стиверсон-обладательница-самой-длинной-фамилии-в-мире! Я хочу поздравить Вас с Днём Рождения!<br><br>Хоть я вас и совсем не знаю, совсем недавно нахожусь в Хогвартсе, но я уже уверена, что вы и вправду горячо любимы ребятами из Хогвартса Дамблдора!<br><br>Хочу пожелать вам всего-всего: и удач, и неудач, дабы был балас вселенной! Радуйте учеников, преподователей и многих других людей своей улыбкой и хорошим настроением. Просто будьте счастливы, вот что!<br><br>С днём рождения!<br><br>Скарлетт Картер",
-    "С днём рождения мисисс Джонсон-Шрив-Стиверсон! Вы невероятная! Во всем! В квиддиче с вами невероятно комфортно летать в одной команде, а против вас невероятно интересно, вы всегда поддерживаете львят во всём, а музыкальные вечера в ОГ, которые вы ведёте, гриффиндорски зажигательны! Пусть каждый день будет ярким, необычным и волшебным! Пусть теплые слова звучат чаще, напоминая, что вы - прекрасны! Пусть исполняются мечты, сбываются желания и всегда и всюду окружают добрые чудеса!<br><br>Evylin McFie",
-    "🥳 с днем рождения поздравляю! 🎉🎂🎁<br><br>Аннет",
-    "Джулс! Поздравляю с днём рождения) Желаю ещё много-много проглоченных снитчей, сил на энциклопедию и другие идеи - и времени, конечно. И самых искренних и приятных воспоминаний не только на квиддичном стадионе, а и в стенах Школы ещё долго-долго. С праздником!<br><br>Шелия",
-    "Миссис «Вы знаете..... Так получилось.... Что я тоже миссис Шрив-Стиверсон » (да, примерно так я Вас и запомнила), с днём рождения Вас! Ешьте больше еды, но не ешьте снитчи, говорят, это плохо влияет на пищеварение. Успехов Вам в квиддиче, хороших новичков в команду!<br><br>Адрианна Сноу",
-    "С днём рождения!<br><br>Пусть этот день будет таким же особенным, как первое письмо из Хогвартса — неожиданным, долгожданным и полным предвкушения приключений.<br><br>Желаю тебе жизни, наполненной магией — не той, что прячется в учебниках по Заклинаниям, а той, что делает каждый момент ярче:<br>когда утро начинается с вдохновения,<br>когда рядом появляются люди, будто из твоего собственного ордена,<br>и когда мечты оживают, словно картины на стенах школы.<br><br>Пусть удача идёт с тобой плечом к плечу, как верный друг —<br>а все тёмные полосы исчезают от одного лёгкого «Люмос».<br>Пусть в твоей истории будет место и для полётов над миром, и для тихих вечеров в своей тёплой башне, где можно налить себе чашку тыквенного сока и просто быть счастливой.<br><br>Желаю, чтобы каждый новый год твоей жизни был как новый учебный год в Хогвартсе:<br>непредсказуемый, полный открытий, встреч, тайн и маленьких чудес.<br>Чтобы на твоём пути попадались только хорошие люди —<br>и ни один тролль (в прямом и переносном смысле) не смог испортить твоё настроение.<br><br>Пусть твоя магия будет сильной, желания — смелыми,<br>а душа — свободной, как метла в руках потрясающего игрока.<br>И помни: даже если что-то кажется сложным, ты всегда можешь сказать себе:<br>«Экспекто Патронум» —<br>и впереди обязательно появится свет.<br><br>С днём рождения!<br>Люмос в твой путь — сегодня и всегда. ✨🕯️<br><br>Лили Хардман",
-    "Милая, моя любимая, дорогая. Ты самое настоящее солнце! Такая горячая (уф!), пылающая любимым делом, освещающая путь мне и многим другим в этом мире. И я  желаю тебе никогда не погаснуть!<br>Пусть у тебя всё-всё-всё будет хорошо! А я буду идти с тобой под руку и помогать тебе во всём. Обещаю.<br>С ДНЁМ РОЖДЕНИЯ, РОДНАЯ!!!<br><br>Эмберли",
-    "Поздравляю вас с днём рождения! Пускай квиддич всегда радует, а семья вдохновляет на разные свершения!)<br><br>Венди Гренуй",
-    "С днём рождения! Этот день, безусловно, особенный, но я хочу пожелать, чтобы внимание близких, подарки, веселье и лёгкость ты ощущала не только сегодня, но и в каждый свой день — чтобы каждый из них стал для тебя особенным. Пусть в жизни будет больше счастливых моментов, и я уверен, что ты справишься со всеми трудностями на своём пути<br><br>Феликс Морган",
-    "Многоуважаемая Джулия Джонсон-Шрив-Стиверсон! Лучшая и терпеливейшая наставница, талантливейший квиддичист, неповторимая драгоценность всея Гриффиндора, а если выражаться не высокопарно, то добрый, весёлый и умнейший человечище, поздравляю Вас с Днём Рождения! Желаю, чтобы аппетит на снитчи был всегда, чтобы сон хороший был в любое время суток, чтобы окружала беззаботность и позитив. Искренне от всего сердечка желаю всего самого хорошего и светлого. С Днём Рождения, Джулс! :)<br><br>Итас",
-    "Желаю, чтобы каждый съеденный тобой снитч был вкусным и ягодным!<br>Ты прекрасная гриффиндорка и замечательный кэп! Оставайся такой же крутой!<br>С Днем рождения!<br><br>Абсент Нахтвайн",
-    "Уважаемая миссис Джонсон-Стиверсон, поздравляю тебя с Днем Рождения! Пусть твоя трофейная будет полна кубков по квиддичу (минимум три), а снитчи, которые ты съедала в играх возвращались к тебе в первозданном сверкающем виде. В том смысле, что ими можно было бы украсить комнату. И пусть в жизни всегда будет место для волшебства.<br><br>Блейк Эллингтон",
-    "Дорогая Джулия, ты самый капитанский Беси из всеб Гриффиндорских Бесов!<br>Пускай всё будет сладко и счастливо даже у других вокруг ад, крутой тебе взрослой жизни!<br><br>Алиас Кроу",
-    "Джулс!<br><br>Ты — один из тех редких людей, у которых все получается так естественно: вдохновлять, сиять, быть частью команды!<br>Как экс-декан Гриффиндора ты доказала, что храбрость — это не лозунг, а образ жизни. И что иногда настоящий подвиг — это не сразить дракона, а взять ответственность за целый факультет :)  И за целую квиддичную команду! Ты будто родилась с метлой в руках и с интуицией, которая умеет чувствовать снитч за километр! И при этом ты остаёшься невероятно добрым, искренним и настоящим человеком — что, честно говоря, куда сложнее, чем забить квоффл.<br><br>Хочу пожелать тебе всего того, что обычно приносит квиддич: скорости, драйва, эмоций — но без бладжеров в голову и без судей, которые решили начать матч в 7 утра. Чтобы новый год жизни был таким же ярким, как крылья снитча, таким же тёплым, как вечер после победного матча, и таким же вдохновляющим, как идеальный полёт над стадионом. Пусть рядом будут люди, которые тебя ценят, любят и восхищаются тобой, а жизнь дарит лёгкие взлёты, мягкие посадки и только хорошие совпадения вероятностей.<br><br>С днём рождения, Джулс! Ты чудесная — и с каждым годом всё больше <3<br><br>Мия Рейган",
-    "Желаю прожить новый личный год так, чтобы собака тобой гордилась! х) И жду в гости уже наконец!<br><br>Ласс",
-    "Джулс! Я так счастлива, что мы так сильно с тобой сблизились! Очень надеюсь, что я являюсь для тебя такой же опорой и поддержкой, какой являешься для меня ты. С днём рождения, моя милая экс-декан Джулс! Я тебя обожаю! Вместе мы сила, еееееееее!<br><br>Литачка",
-    "Дорогая Джулс!<br><br>С днём рождения! Меня восхищает в тебе много вещей от чувства юмора до обостренного чувства справедливости и правильности, и я очень хочу, чтобы ты берегла это в себе. Будь счастлива и добивайся намеченных планов, а еще — пусть рядом всегда будут дорогие сердцу люди!<br><br>С днем рождения! Береги себя и свой невероятный огонь внутри!<br><br>Ариадна Фрост",
-    "Джулс! Желаю тебе сиять, как снитч, добиваться всех целей с таким же рвением, как бладжер, и быть счастливой - совсем как команда, которая только что забила другой победный квоффл. Люблю, с Днём Рождения! <3<br><br>Lana Lirovska"
+    "С днём рождения! Этот день, безусловно, особенный, но я хочу пожелать, чтобы внимание близких, подарки, веселье и лёгкость ты ощущала не только сегодня, но и в каждый свой день — чтобы каждый из них стал для тебя особенным.<br><br>Феликс Морган"
   ];
 
   let currentBerry = null;
   let bubbleIndex = 0;
+  let welcomeActive = true;
+
+  function hideWelcomeBubble() {
+    if (!welcomeActive) return;
+    welcomeActive = false;
+    welcomeBubble.style.transition = "transform 0.5s ease, opacity 0.5s ease";
+    welcomeBubble.style.transform = "translate(-50%, -50%) scale(0)";
+    welcomeBubble.style.opacity = "0";
+    setTimeout(() => welcomeBubble.remove(), 600);
+  }
 
   basket.addEventListener("click", (e) => {
+    hideWelcomeBubble();
     if (currentBerry) return;
     createBerry(e);
   });
@@ -177,7 +192,6 @@
     currentBerry = berry;
 
     moveBerryToMouse(berry, e);
-
     berry.style.pointerEvents = "none";
 
     function followMouse(ev) {
@@ -233,12 +247,13 @@
     container.appendChild(puff);
 
     const rect = container.getBoundingClientRect();
-    puff.style.left = (x - rect.left - 35) + "px"; // центрируем
-    puff.style.top = (y - rect.top - 35) + "px";
-
-    requestAnimationFrame(() => {
-      puff.style.opacity = "1";
-    });
+    puff.onload = () => {
+      const puffWidth = puff.offsetWidth;
+      const puffHeight = puff.offsetHeight;
+      puff.style.left = (x - rect.left - puffWidth/2) + "px";
+      puff.style.top = (y - rect.top - puffHeight/2) + "px";
+      requestAnimationFrame(() => puff.style.opacity = "1");
+    };
 
     setTimeout(() => {
       puff.style.opacity = "0";
@@ -247,7 +262,7 @@
   }
 
   function showSteamText() {
-    if (bubbleIndex >= messages.length) bubbleIndex = 0; // зацикливаем
+    if (bubbleIndex >= messages.length) bubbleIndex = 0;
     steamText.innerHTML = messages[bubbleIndex];
     bubbleIndex++;
 
@@ -263,6 +278,7 @@
       });
     });
   }
+
 </script>
 </body>
 </html>
