--- a/index.html
+++ b/index.html
@@ -40,21 +40,11 @@ body {
 #wand:hover { transform: rotate(-20deg) scale(1.05); }
 
 .berry { position: absolute; width: 10%; cursor: grab; user-select: none; z-index: 20; pointer-events: auto; }
-
-.poof {
-  position: absolute;
-  pointer-events: none;
-  z-index: 25;
-  opacity: 0;
-  transition: opacity 0.6s ease;
-  max-width: 150px;
-  width: auto;
-  height: auto;
-}
+.poof { position: absolute; pointer-events: none; z-index: 25; opacity: 0; transition: opacity 0.6s ease; max-width: 150px; width: auto; height: auto; }
 
 #steam-text {
   position: absolute;
-  top: 25%; /* подняли баблы выше */
+  top: 25%;
   left: 75%;
   transform: translate(-50%, -50%) scale(1);
   opacity: 1;
@@ -84,7 +74,6 @@ body {
 }
 </style>
 </head>
-
 <body>
 <div class="container">
   <img id="basket" class="item" src="https://i.ibb.co/hxdH1ChV/Chat-GPT-Image-17-2025-19-07-18.png" alt="Корзинка" />
@@ -94,7 +83,7 @@ body {
   <!-- Бабл с текстами и приветствие -->
   <div id="steam-text">
     <h2 style="color:#7b3131; margin:0 0 8px 0; font-size:18px;">
-      ✨ Ягодка, мы рады приветствовать тебя на волшебной кухне! ✨
+    Ягодка, мы рады приветствовать тебя на волшебной кухне!
     </h2>
     <p>Сегодня особенный день, поэтому у нас для тебя есть особенный рецепт. Давай приготовим бесконечное варенье! Сколько его не ешь, оно не закончится и всегда будет тебя радовать.</p>
     <p>Просто добавляй ягоды в кастрюлю: 🍓👉🏻🥘</p>
@@ -115,48 +104,76 @@ const berrySrc = "https://i.ibb.co/Hfdh9TPG/Chat-GPT-Image-17-2025-19-01-18.png"
 const jamJarSrc = "https://i.ibb.co/GvHNg5vc/Chat-GPT-Image-19-2025-16-38-48.png";
 
 const messages = [
-  "Джулс, с днем рождения! Пусть этот год принесёт тебе много сил, радости и крутых событий. Желаю ярких впечатлений, вдохновения во всём за что берёшься и крепкого здоровья.<br><br>Дина",
-  "Поздравляю с Днем Рождения! Кушайте много сладкого и пейте много вкусного в Ваш день 🎂<br><br>Аделин Эйвери",
-  "С днём рождения!!! Всего наилучшего и самого волшебного в жизни! :D<br><br>Герон Вайтмор",
-  "С днём рождения! Этот день, безусловно, особенный, но я хочу пожелать, чтобы внимание близких, подарки, веселье и лёгкость ты ощущала не только сегодня, но и в каждый свой день — чтобы каждый из них стал для тебя особенным.<br><br>Феликс Морган"
+  "Поздравляем! Первый бабл.",
+  "Следующий бабл.",
+  "И последний бабл — скоро магия!"
 ];
 
 let currentBerry = null;
 let bubbleIndex = 0;
 let firstClick = true;
 let lastBubble = false;
-let jamPlaced = false;
 let berriesDisabled = false;
+let wandInHand = false;
 
-function hideSteamText() {
+// Функция показа бабла
+function showSteamText(text){
+  steamText.innerHTML = text;
+  steamText.style.transition = "none";
   steamText.style.transform = "translate(-50%, -50%) scale(0)";
   steamText.style.opacity = "0";
-  setTimeout(() => { steamText.innerHTML = ""; }, 500);
+  requestAnimationFrame(() => {
+    requestAnimationFrame(()=>{
+      steamText.style.transition = "transform 0.5s ease, opacity 0.5s ease";
+      steamText.style.transform = "translate(-50%, -50%) scale(1)";
+      steamText.style.opacity = "1";
+    });
+  });
 }
 
-// Клик по корзине
-basket.addEventListener("click", (e) => {
-  if(firstClick) { 
-    hideSteamText();
+// Функция пуфа
+function triggerPoof(x, y, scale=1){
+  const puff = document.createElement("img");
+  puff.src = "https://opengameart.org/sites/default/files/gif_4.gif";
+  puff.className = "poof";
+  container.appendChild(puff);
+  puff.onload = () => {
+    const w = puff.offsetWidth * scale;
+    const h = puff.offsetHeight * scale;
+    puff.style.width = w + "px";
+    puff.style.height = h + "px";
+    puff.style.left = (x - w/2) + "px";
+    puff.style.top = (y - h/2) + "px";
+    requestAnimationFrame(() => puff.style.opacity = "1");
+  };
+  setTimeout(() => { puff.style.opacity = "0"; setTimeout(()=>puff.remove(),400); }, 600);
+}
+
+// --------------------
+// Логика ягод
+basket.addEventListener("click", (e)=>{
+  if(firstClick){
     firstClick = false;
-    if(bubbleIndex >= messages.length) lastBubble = true;
+    showSteamText(messages[bubbleIndex]);
+    bubbleIndex++;
+    return;
   }
-  if(berriesDisabled) {
+  if(bubblesDisabled) return;
+  if(lastBubble && !wandInHand) {
     showTip(e.clientX, e.clientY, "ягоды достаточно 🍓");
     return;
   }
-  if(currentBerry) return;
   createBerry(e);
 });
 
 function createBerry(e){
+  if(currentBerry) return;
   const berry = document.createElement("img");
   berry.src = berrySrc;
   berry.className = "berry";
   container.appendChild(berry);
   currentBerry = berry;
   moveBerry(berry, e);
-
   berry.style.pointerEvents = "none";
 
   function follow(ev){ moveBerry(berry, ev); }
@@ -180,102 +197,69 @@ function moveBerry(berry, e){
 function checkDrop(berry){
   const berryRect = berry.getBoundingClientRect();
   const potRect = pot.getBoundingClientRect();
-
   const overlap = berryRect.left < potRect.right &&
                   berryRect.right > potRect.left &&
                   berryRect.top < potRect.bottom &&
                   berryRect.bottom > potRect.top;
-
   if(overlap){
-    const x = berryRect.left + berryRect.width/2;
-    const y = berryRect.top + berryRect.height/2;
-    triggerPoof(x, y, lastBubble ? 2 : 1);
+    triggerPoof(berryRect.left + berryRect.width/2, berryRect.top + berryRect.height/2);
     berry.remove();
     currentBerry = null;
-
-    if(lastBubble && !jamPlaced){
-      // Банка варенья под размер кастрюли
-      const newJar = document.createElement("img");
-      newJar.src = jamJarSrc;
-      newJar.style.position = "absolute";
-      newJar.style.left = pot.style.left;
-      newJar.style.top = pot.style.top;
-      newJar.style.width = pot.style.width;
-      newJar.style.zIndex = 1;
-      container.replaceChild(newJar, pot);
-      pot = newJar;
-      jamPlaced = true;
-      berriesDisabled = true;
+    if(bubbleIndex < messages.length){
+      showSteamText(messages[bubbleIndex]);
+      bubbleIndex++;
+      if(bubbleIndex === messages.length) lastBubble = true;
     } else {
-      showSteamText();
+      lastBubble = true;
     }
   } else {
     currentBerry = null;
   }
 }
 
-function triggerPoof(x, y, scale=1){
-  const puff = document.createElement("img");
-  puff.src = "https://opengameart.org/sites/default/files/gif_4.gif";
-  puff.className = "poof";
-  container.appendChild(puff);
-
-  const rect = container.getBoundingClientRect();
-  puff.onload = () => {
-    const w = puff.offsetWidth * scale;
-    const h = puff.offsetHeight * scale;
-    puff.style.width = w + "px";
-    puff.style.height = h + "px";
-    puff.style.left = (x - rect.left - w/2) + "px";
-    puff.style.top = (y - rect.top - h/2) + "px";
-    requestAnimationFrame(() => puff.style.opacity = "1");
-  };
-
-  setTimeout(() => { puff.style.opacity = "0"; setTimeout(()=>puff.remove(),400); }, 600);
-}
-
-function showSteamText(){
-  if(bubbleIndex >= messages.length) bubbleIndex = messages.length - 1;
-  steamText.innerHTML = messages[bubbleIndex];
-  bubbleIndex++;
-  lastBubble = (bubbleIndex === messages.length);
-  steamText.style.transition = "none";
-  steamText.style.transform = "translate(-50%, -50%) scale(0)";
-  steamText.style.opacity = "0";
-  requestAnimationFrame(()=> {
-    requestAnimationFrame(()=>{
-      steamText.style.transition = "transform 0.5s ease, opacity 0.5s ease";
-      steamText.style.transform = "translate(-50%, -50%) scale(1)";
-      steamText.style.opacity = "1";
-    });
-  });
-}
-
-// Палочка кликабельна
-wand.addEventListener("click", (e)=>{
-  e.stopPropagation();
-  if(!lastBubble || jamPlaced) return;
-  triggerPoof(pot.getBoundingClientRect().left + pot.offsetWidth/2,
-              pot.getBoundingClientRect().top + pot.offsetHeight/2, 2);
-  const newJar = document.createElement("img");
-  newJar.src = jamJarSrc;
-  newJar.style.position = "absolute";
-  newJar.style.left = pot.style.left;
-  newJar.style.top = pot.style.top;
-  newJar.style.width = pot.style.width;
-  newJar.style.zIndex = 1;
-  container.replaceChild(newJar, pot);
-  pot = newJar;
-  jamPlaced = true;
-  berriesDisabled = true;
-});
-
-// Маленький текст "ещё не время" или "ягоды достаточно"
+// --------------------
+// Логика палочки
 wand.addEventListener("mousedown", (e)=>{
-  if(lastBubble && !jamPlaced) return;
-  showTip(e.clientX, e.clientY, "ещё не время 🪄");
+  if(!lastBubble || wandInHand) return;
+  wandInHand = true;
+  const wandClone = wand.cloneNode(true);
+  wandClone.style.pointerEvents = "none";
+  container.appendChild(wandClone);
+  const rect = container.getBoundingClientRect();
+
+  function follow(ev){
+    wandClone.style.left = (ev.clientX - rect.left - wandClone.offsetWidth/2) + "px";
+    wandClone.style.top = (ev.clientY - rect.top - wandClone.offsetHeight/2) + "px";
+  }
+
+  function release(ev){
+    const potRect = pot.getBoundingClientRect();
+    if(ev.clientX > potRect.left && ev.clientX < potRect.right &&
+       ev.clientY > potRect.top && ev.clientY < potRect.bottom){
+         // Замена кастрюли на банку варенья
+         const jar = document.createElement("img");
+         jar.src = jamJarSrc;
+         jar.style.position = "absolute";
+         jar.style.left = pot.style.left;
+         jar.style.top = pot.style.top;
+         jar.style.width = pot.style.width;
+         jar.style.zIndex = 1;
+         container.replaceChild(jar, pot);
+         pot = jar;
+         triggerPoof(potRect.left + potRect.width/2, potRect.top + potRect.height/2, 2);
+         berriesDisabled = true;
+    }
+    wandClone.remove();
+    wandInHand = false;
+    document.removeEventListener("mousemove", follow);
+    document.removeEventListener("mouseup", release);
+  }
+
+  document.addEventListener("mousemove", follow);
+  document.addEventListener("mouseup", release);
 });
 
+// --------------------
 function showTip(x,y,text){
   smallTip.innerText = text;
   smallTip.style.left = x + "px";
